Write Post  model docs for GET
