# swagger_output.json
@@ -2,8 +2,8 @@
   "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "Moria Open API",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    "title": "Moria OpenAPI",
+    "description": "OpenAPI documentation of <b>Moria</b> social media."
   },
   "servers": [
     {
@@ -16,6 +16,10 @@
   "tags": [
     {
       "name": "User",
+      "description": "Endpoints"
+    },
+    {
+      "name": "Post",
       "description": "Endpoints"
     }
   ],
@@ -298,11 +302,33 @@
     },
     "/api/posts/": {
       "get": {
-        "description": "",
-        "parameters": [],
+        "tags": [
+          "Post"
+        ],
+        "description": "Endpoint to get all posts.",
+        "parameters": [
+          {
+            "$ref": "#myParameters/listQuery/page"
+          },
+          {
+            "$ref": "#myParameters/listQuery/limit"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Returns a paginated list of posts.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Post"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Post"
+                }
+              }
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -330,7 +356,10 @@
     },
     "/api/posts/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Post"
+        ],
+        "description": "Endpoint to get one specific post.",
         "parameters": [
           {
             "name": "id",
@@ -343,7 +372,19 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Returns the requested post.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Post"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Post"
+                }
+              }
+            }
           },
           "404": {
             "description": "Not Found"
@@ -615,6 +656,34 @@
         },
         "xml": {
           "name": "LoginUser"
+        }
+      },
+      "Post": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "example": "New post from Shire!"
+          },
+          "text": {
+            "type": "string",
+            "example": "Todat is a nice day! Hope to enjoy it."
+          },
+          "user": {
+            "type": "string",
+            "example": "Frodo_Baggins"
+          },
+          "createdAt": {
+            "type": "string",
+            "example": "2022-08-12T17:35:23.017Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "example": "2022-09-11T20:11:56.017Z"
+          }
+        },
+        "xml": {
+          "name": "Post"
         }
       }
     },
